--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               <div class="text">
                 <h3>MJ Eats</h3>
                 <p>Developed "MJ Eats," a web application using the MERN stack to streamline and organize the ordering process in college canteens. This project aims to combat long queues by allowing students to place orders online, reducing wait times and improving overall efficiency. Features include real-time menu updates, order tracking, and secure payment options.</p>
-                <a href="https://github.com/raffay69/mjeats-new.git">GitHub</a>
+                <a href="https://mjeats.onrender.com">GitHub</a>
               </div>
             </div>
           </div>
